# kazeflow

./: GEMINI.md  Makefile  README.md  example.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publich.yml
src/kazeflow/: assets.py  config.py  context.py  flow.py  logger.py  partition.py  result.py  tui.py
tests/: test_flow.py
