[project]
name = "kazeflow"
version = "0.1.0a"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kj", email = "46800811+kj-9@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.2",
    "ty>=0.0.1a20",
]
